--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: VSP Benchmarks
-logo: /assets/img/paper-plane-icon-vector.jpg
+logo: /assets/img/paper-plane-icon-vector.png
 #description: text below image
 show_downloads: true
 theme: Jekyll-theme-minimal
