--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: VSP Benchmarks
-#logo: paper-plane-icon-vector.png
+logo: assets/img/paper-plane-icon-vector.png
 #description: text below image
 show_downloads: false
 theme: Jekyll-theme-slate
