--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: VSP Benchmarks
 logo: assets/img/paper-plane-icon-vector.png
 #description: text below image
 show_downloads: false
-theme: Jekyll-theme-slate
+theme: slate
