--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ logo: assets/img/paper-plane-icon-vector.png
 #description: text below image
 show_downloads: false
 theme: jekyll-theme-slate
+github:
+  is_project_page: false
